--- a/join.html
+++ b/join.html
@@ -317,7 +317,7 @@
                 finalAggSig = bufferToHex(finalAggSig)
 
                 document.getElementById("aggSigAggKeyDisplay").style.display = "block"
-                SignatureObject = { aggregateKey: finalAggKeys, aggrgateSignature: finalAggSig, signerIndexes: signerIndex, message: globalMessage }
+                SignatureObject = { aggregateKey: finalAggKeys, aggregateSignature: finalAggSig, signerIndexes: signerIndex, message: globalMessage }
                 document.getElementById("aggSigAggKeyDisplay").innerHTML += JSON.stringify(SignatureObject)
 
             }
