Update Test Materials with correct spelling

--- a/verify.html
+++ b/verify.html
@@ -180,7 +180,7 @@
             thresholdOfSigners = jsonGroupInfo.thresholdNumber
 
             jsonSigInfo = JSON.parse(sigInfo.innerText)
-            aggregateSignature = jsonSigInfo.aggrgateSignature //updatethis
+            aggregateSignature = jsonSigInfo.aggregateSignature //updatethis
             message  = jsonSigInfo.message
             signerIndexes = jsonSigInfo.signerIndexes
 
