dont change  this file

--- a/groupsigncreate.html
+++ b/groupsigncreate.html
@@ -790,20 +790,8 @@
 
 
         function displayExisting() {
-
-            //Load Group from file group info 
-            //allow joining where user must import key
-            //reject keys that arent in group
-            //somehow force old order
-
-            //or do threshold verification
-
-            document.getElementById("buttonboxmain").style.display = "none"
-            document.getElementById("existingGroup").style.display = "block"
-            document.getElementById("existingGroupContainer").style.display = "block"
-
-
-
+            document.getElementById("nameContainer").style.display = "block"
+            document.getElementById("buttonbox").style.display = "none"
         }
 
         async function groupInfo() {
