--- a/groupsigncreate.html
+++ b/groupsigncreate.html
@@ -604,12 +604,16 @@
             socket.emit('setUsername', { namewanted: name, roomname: roomid, socketid: socket.id, isLeader: true, publicKey: pubKey, thresholdNumber: threshold, signersNumber: signers });
         };
 
-        function setUsernameExisting(name,roomid,passedinfogroup) {
-            socket.emit('setUsernameExisting', { namewanted: name, roomname: roomid, socketid: socket.id, infoGroup:passedinfogroup});
+        function setUsernameExisting(fullPubKey,roomid,passedinfogroup) {
+            socket.emit('setUsernameExisting', { pubKey: fullPubKey, roomname: roomid, socketid: socket.id, infoGroup:passedinfogroup});
         };
 
         function getUsers() {
             socket.emit('getUsers', { roomid: randomroom });
+        };
+
+        function getExistingUsers() {
+            socket.emit('getExistingUsers', { roomid: randomroom });
         };
 
         function GenerateOrLoad() {
@@ -646,6 +650,8 @@
             }
 
             infoGroup = JSON.parse(infoGroup)
+            signers = infoGroup.numberOfSigners
+            threshold = infoGroup.thresholdNumber
 
             for (let index = 0; index < infoGroup.signingKeys.length; index++) {
                 element = infoGroup.signingKeys[index];
@@ -800,6 +806,64 @@
             }
         })
 
+        socket.on('getLoadedUsers', function (data) {
+            userList = data.userlist
+            readyUsers = 0
+            readycounter = 0
+
+            document.getElementById("nameDisplay").style.display = "block"
+            document.getElementById("pubKeyDisplay").style.display = "block"
+            document.getElementById("pubKeyDisplay").innerHTML = ""
+            document.getElementById("wait").style.display = "block"
+            
+
+            for (let index = 0; index < userList.length; index++) {
+
+                if (userList[index].joinstatus == false) {
+                    continue
+                }
+
+                readycounter ++
+
+                name = userList[index].publicKey;
+                name = name.replace(/(.{7})..+/, "$1&hellip;");
+                socketchoice = userList[index].socketid
+                document.getElementById("pubKeyDisplay").innerHTML += "<div id=" + socketchoice + "" + " class=\"joinedNames\">" + name + "</div>"
+
+                if (userList[index].readyStatus == true) {
+                    document.getElementById(socketchoice).innerText += "✔️"
+                    readyUsers++
+                }
+
+            }
+
+            if (isReady == false && readycounter == signers) {
+                document.getElementById("wait").innerText = "Waiting for everyone to ready up "
+                ready()
+
+            }
+            else {
+                document.getElementById("readybutton").style.display = "none"
+            }
+
+            if (readyUsers >= signers) {
+                document.getElementById("wait").style.display = "none"
+                document.getElementById("proposedMessageDisplay").style.display = "block"
+                document.getElementById("buttonboxProposedMessage").style.display = "block"
+                document.getElementById("buttonSavegroup").style.display = "inline-block"
+                document.getElementById("roomcontainer").style.display = "none"
+
+            }
+            if (readyUsers == signers && frozenUserList.length == 0) {
+                //Freeze getinfo Array when everyone is joined
+                frozenUserList = userList
+                roomFull(randomroom)
+
+
+            }
+            document.getElementById("wait").innerText = "Waiting for Signers " + readycounter + " Out of " + signers
+        })
+
 
         var user;
         socket.on('userExists', function (data) {
@@ -891,7 +955,7 @@
             document.getElementById("roombox").value = "GenThresh.org/joinE?" + randomroom
             document.getElementById("roomcontainer").style.display = "block"
             document.getElementById("ThresholdDisplay").innerHTML = "Signers: " + infoGroup.numberOfSigners + " Threshold: " + infoGroup.thresholdNumber
-            getUsers() //need a complete different getusers? 
+            getExistingUsers()
         }
 
         function ready() {
